cmake_minimum_required(VERSION 3.16)
project(MyQtApp)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
find_package(Qt6 REQUIRED COMPONENTS Widgets)
add_executable(finalProject main.cpp)
target_link_libraries(finalProject
    Qt6::Widgets
)
